work in progress - updating Front-end dev docs to reflect change to Astro (Templating)

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -98,9 +98,12 @@ html {
       padding: 25px 30px;
       background-color: color-mix(
         in srgb,
-        var(--ifm-color-primary-lightest) 5%,
+        var(--ifm-color-primary-lightest) 8%,
         transparent
       );
+      code {
+        background-color: #ffffff;;
+      }
     }
   }
 }
